--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
 
     <body>
-        <div class="wrapper">
-            <nav>
-                <ul>
-                    <li>jessie</li>
-                    <li>about</li>
-                    <li>contact</li>
-                </ul>
-            </nav>
-            <section class="wrap intro">
-                <p>jw</p>
-            </section>
-            <section class="wrap about"></section>
-            <section class="wrap work"></section>
-            <section class="wrap contact"></section>
-            <section class="wrap"></section>
-        </div>
+        <section class="wrapper"></section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="scripts/js.js"></script>
         <script src="https://spreadsheets.google.com/feeds/list/ KEY /1/public/values?alt=json-in-script&callback=getJson"></script>
