--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
                 <h1>eureka!</h1>
             </header>
 
-            <section class="wrap step-1">
-                <ul>
+            <main>
+               <button id="science">Understand the Science</button>
+               <button id="habits">Let’s get to know your habits</button>
+               <button id="fotgot">I forgot!</button>
+            </main>
+            <section class="wrap step1">
+                <ul class="cf">
                     <li data-room="living_room">
                         <p>living room</p>
                         <img src="images/room-1.png" alt="">
                         <p>Lorem ipsum.</p>
                     </li>
-                    <li data-room="dining_room">
-                        <p>dining room</p>
+                    <li data-room="hallway">
+                        <p>hallway</p>
                         <img src="images/room-1.png" alt="">
                         <p>Lorem ipsum.</p>
                     </li>
@@ -38,7 +43,31 @@
                         <img src="images/room-1.png" alt="">
                         <p>Lorem ipsum.</p>
                     </li>
+                    <li data-room="bedroom">
+                        <p>bedroom</p>
+                        <img src="images/room-1.png" alt="">
+                        <p>Lorem ipsum.</p>
+                    </li>
                 </ul>
+            </section>
+
+            <section class="wrap step2">
+                <ul class="cf">
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                    <li data-activity="kill_hampster">kill hampster</li>
+                </ul>
+            </section>
+
+            <section class="wrap step3">
+                <button class="submit">Submit</button>
             </section>
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
