--- a/index.html
+++ b/index.html
@@ -17,45 +17,47 @@
             </header>
 
             <main>
-               <button id="science">Understand the Science</button>
-               <button id="habits">Let’s get to know your habits</button>
-               <button id="fotgot">I forgot!</button>
+               <button data-category="science">Understand the Science</button>
+               <button data-category="habits">Let’s get to know your habits</button>
+               <button data-category="forgot">I forgot!</button>
             </main>
+
+            <section class="wrap" data-category="science">
+                <p>“Kids these days don’t remember anything because their brains are turning to mush on the internet” --that old lady who lives two doors down the street with all the cats[photo?]</p>
+                <img src="images/albert.gif" alt="Albert En">
+            </section>
             <section class="wrap step1">
+                <h2>step 1</h2>
                 <ul class="cf">
                     <li data-room="living_room">
                         <p>living room</p>
-                        <img src="images/room-1.png" alt="">
-                        <p>Lorem ipsum.</p>
+                        <!-- <img src="images/room-1.png" alt=""> -->
                     </li>
                     <li data-room="hallway">
                         <p>hallway</p>
-                        <img src="images/room-1.png" alt="">
-                        <p>Lorem ipsum.</p>
+                        <!-- <img src="images/room-1.png" alt=""> -->
                     </li>
                     <li data-room="kitchen">
                         <p>kitchen</p>
-                        <img src="images/room-1.png" alt="">
-                        <p>Lorem ipsum.</p>
+                        <!-- <img src="images/room-1.png" alt=""> -->
                     </li>
                     <li data-room="bathroom">
                         <p>bathroom</p>
-                        <img src="images/room-1.png" alt="">
-                        <p>Lorem ipsum.</p>
+                        <!-- <img src="images/room-1.png" alt=""> -->
                     </li>
                     <li data-room="bedroom">
                         <p>bedroom</p>
-                        <img src="images/room-1.png" alt="">
-                        <p>Lorem ipsum.</p>
+                        <!-- <img src="images/room-1.png" alt=""> -->
                     </li>
                 </ul>
             </section>
 
             <section class="wrap step2">
-                <ul class="cf">
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
+                <h2>step 2</h2>
+                <ul class="cf" data-room="living_room">
+                    <li data-activity="sandwich">making a sandwich</li>
+                    <li data-activity="hampster">murdering a hamster</li>
+                    <li data-activity="masturbate">masturbate</li>
                     <li data-activity="kill_hampster">kill hampster</li>
                     <li data-activity="kill_hampster">kill hampster</li>
                     <li data-activity="kill_hampster">kill hampster</li>
@@ -67,7 +69,12 @@
             </section>
 
             <section class="wrap step3">
+                <h2>step 3</h2>
                 <button class="submit">Submit</button>
+            </section>
+
+            <section class="wrap step4">
+                <h2>step 4</h2>
             </section>
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
