--- a/index.html
+++ b/index.html
@@ -12,94 +12,50 @@
 
     <body>
         <section class="wrapper">
-            <header>
+            <section class="wrap step step0">
                 <h1>eureka!</h1>
-            </header>
-
-            <main>
-               <button data-category="science">Understand the Science</button>
-               <button data-category="habits">Let’s get to know your habits</button>
-               <button data-category="forgot">I forgot!</button>
-            </main>
-
-            <section class="wrap" data-category="science">
-                <p>“Kids these days don’t remember anything because their brains are turning to mush on the internet” --that old lady who lives two doors down the street with all the cats[photo?]</p>
-                <img src="images/albert.gif" alt="Albert En">
+                <button class="forgot">I forgot!</button>
             </section>
-            <section class="wrap step1">
-                <h2>step 1</h2>
-                <ul class="cf">
-                    <li data-room="living_room">
-                        <p>living room</p>
-                        <!-- <img src="images/room-1.png" alt=""> -->
-                    </li>
-                    <li data-room="hallway">
-                        <p>hallway</p>
-                        <!-- <img src="images/room-1.png" alt=""> -->
-                    </li>
-                    <li data-room="kitchen">
-                        <p>kitchen</p>
-                        <!-- <img src="images/room-1.png" alt=""> -->
-                    </li>
-                    <li data-room="bathroom">
-                        <p>bathroom</p>
-                        <!-- <img src="images/room-1.png" alt=""> -->
-                    </li>
-                    <li data-room="bedroom">
-                        <p>bedroom</p>
-                        <!-- <img src="images/room-1.png" alt=""> -->
-                    </li>
+            <section class="wrap step step1">
+                <h2>is it this site?</h2>
+
+                <button class="next">No</button>
+            </section>
+            <section class="wrap step step2">
+                <h2>what room are you in?</h2>
+                <ul>
+                    <li>bathroom</li>
+                    <li>bedroom</li>
+                    <li>kitchen</li>
                 </ul>
+                 <button class="next">No</button>
             </section>
-
-            <section class="wrap step2">
-                <h2>step 2</h2>
-                <ul class="cf" data-room="living_room">
-                    <li data-activity="sandwich">making a sandwich</li>
-                    <li data-activity="hampster">murdering a hamster</li>
-                    <li data-activity="masturbate">masturbate</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
-                    <li data-activity="kill_hampster">kill hampster</li>
+            <section class="wrap step step3">
+                <h2>are you holding something?</h2>
+                <ul>
+                    <li>knife</li>
+                    <li>tissues</li>
+                    <li>plastic bag</li>
+                    <li>keys</li>
                 </ul>
+                 <button class="next">No</button>
             </section>
-
-            <section class="wrap step3">
-                <h2>step 3</h2>
-                <button class="submit">Submit</button>
+            <section class="wrap step step4">
+                <h2>tell us what you think you forgot</h2>
+                <input type="text">
+                <button class="next">No</button>
             </section>
-
-            <section class="wrap step4">
-                <h2>step 4</h2>
+            <section class="wrap step step5">
+                <h2>okay what about</h2>
+                 <button class="next">No</button>
+            </section>
+            <section class="wrap step step6">
+                <h2>is it ...</h2>
+                 <button class="next">No</button>
             </section>
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="scripts/js.js"></script>
     </body>
+
 </html>
-
-
-
-<!-- <script src="https://spreadsheets.google.com/feeds/list/ KEY /1/public/values?alt=json-in-script&callback=getJson"></script> 
-// function getJson(json) {
-
-//     var content = "";
-
-//     h1 = json.feed.entry[0].gsx$h1.$t;
-
-//     for (var i = 0; i < json.feed.entry.length; i++) {
-//         entry = json.feed.entry[i];
-
-//         var copy = entry.gsx$copy.$t;
-
-//         content += '<div class="wrap">' +  + '</div>';
-//     }
-//     $('.wrapper').append(content);
-// };
-
-
--->
