adds next button

--- a/index.html
+++ b/index.html
@@ -18,41 +18,37 @@
             </section>
             <section class="wrap step step1">
                 <h2>is it this site?</h2>
-
-                <button class="next">No</button>
+                <p class="site"></p>
             </section>
             <section class="wrap step step2">
                 <h2>what room are you in?</h2>
                 <ul>
-                    <li>bathroom</li>
-                    <li>bedroom</li>
-                    <li>kitchen</li>
+                    <li data-step2="bathroom">bathroom</li>
+                    <li data-step2="bedroom">bedroom</li>
+                    <li data-step2="kitchen">kitchen</li>
                 </ul>
-                 <button class="next">No</button>
             </section>
             <section class="wrap step step3">
                 <h2>are you holding something?</h2>
                 <ul>
-                    <li>knife</li>
-                    <li>tissues</li>
-                    <li>plastic bag</li>
-                    <li>keys</li>
+                    <li data-step3="knife">knife</li>
+                    <li data-step3="tissues">tissues</li>
+                    <li data-step3="plastic_bag">plastic bag</li>
+                    <li data-step3="keys">keys</li>
                 </ul>
-                 <button class="next">No</button>
             </section>
             <section class="wrap step step4">
                 <h2>tell us what you think you forgot</h2>
                 <input type="text">
-                <button class="next">No</button>
+                <button type="submit">submit</button>
             </section>
             <section class="wrap step step5">
                 <h2>okay what about</h2>
-                 <button class="next">No</button>
             </section>
             <section class="wrap step step6">
                 <h2>is it ...</h2>
-                 <button class="next">No</button>
             </section>
+            <button class="next">No</button>
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="scripts/js.js"></script>
