--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
                 <button class="forgot">I forget</button>
             </section>
 
+            <section class="first-screen">
+                <h1>where do you want to start</h1>
+                <div class="btn">
+                    <button id="step1">trending</button>
+                    <button id="step2">your friends</button>
+                    <button id="step3">browser history</button>
+                </div>
+            </section>
             <!-- trending -->
             <section class="wrap step step1">
                 <h3>trending</h3>
-                <div class="option">
+                <div class="option" id="option-1">
                     <h2>your friends are all putting the French flag on their Facebook profile: <span>did you want to buy French fries?</span></h2>
                     <div class="half-wrap img-wrap">
                         <img src="images/french.jpg" alt="">
@@ -49,7 +57,7 @@
                         <button class="no">No thanks</button>
                     </div>
                 </div>
-                 <div class="option something-else">
+                <div class="option something-else">
                     <h1>don't worry, let's try something else</h1>
                     <div class="three-bttn-wrap bttn-wrap">
                         <button id="step1">trending</button>
@@ -58,40 +66,52 @@
                     </div>
                 </div>
             </section>
-
             <!-- photo -->
             <section class="wrap step step2">
                 <h3>Take a photo of yourself</h3>
-                <div class="option">
-                    <h2>you look tired:<span> why not treat yourself to a peppermint creme brulee chestnut candy cane frappachino lattespresso? Your local Starbucks is only 27m away! </span> <button class="yes">Eureka!</button><button class="no">No thanks</button></h2>
+                <div class="option" id="option-2">
+                    <h2>you look tired:<span> why not treat yourself to a peppermint creme brulee chestnut candy cane frappachino lattespresso? Your local Starbucks is only 27m away! </span></h2>
                     <div class="half-wrap img-wrap">
                         <img src="images/starbucks.jpeg" alt="">
                     </div>
+                    <div class="bttn-wrap">
+                        <button class="yes">Eureka!</button>
+                        <button class="no">No thanks</button>
+                    </div>
                 </div>
                 <div class="option">
-                    <h2>you look pale: <span>why not book a trip on Porter’s one day every day sale to sunny Miami?</span><button class="yes">Eureka!</button><button class="no">No thanks</button></h2>
+                    <h2>you look pale: <span>why not book a trip on Porter’s one day every day sale to sunny Miami?</span></h2>
                     <div class="half-wrap img-wrap">
                         <img src="images/porter.png" alt="">
+                    </div>
+                    <div class="bttn-wrap">
+                        <button class="yes">Eureka!</button>
+                        <button class="no">No thanks</button>
                     </div>
                 </div>
                 <div class="option">
                     <h2>you look old: <span>why not book an appointment for a rejuvasuction liposuction botox life</span></h2>
-                    <button class="yes">Eureka!</button>
-                    <button class="no step2-last">No thanks</button>
                     <div class="half-wrap img-wrap">
                         <img src="images/mark.png" alt="">
                     </div>
+                    <div class="bttn-wrap">
+                        <button class="yes">Eureka!</button>
+                        <button class="no">No thanks</button>
+                    </div>
                 </div>
-                 <div class="option something-else">
-                    <h1>try something else</h1>
-                    <button class="something-else">Try something else</button>
+                <div class="option something-else">
+                    <h1>don't worry, let's try something else</h1>
+                    <div class="three-bttn-wrap bttn-wrap">
+                        <button id="step1">trending</button>
+                        <button id="step2">your friends</button>
+                        <button id="step3">browser history</button>
+                    </div>
                 </div>
             </section>
-
             <!-- browser -->
             <section class="wrap step step3">
                 <h3>your browser history</h3>
-                <div class="option">
+                <div class="option" id="option-3">
                     <h2>It looks like you were looking at your crush’s Facebook page: <span>why not start a flirty conversation with him? </span></h2>
                     <div class="img-wrap">
                         <img src="images/mark.png" alt="">
@@ -106,7 +126,7 @@
                     <div class="half-wrap img-wrap">
                         <img src="images/bachelor.png" alt="">
                     </div>
-                     <div class="bttn-wrap">
+                    <div class="bttn-wrap">
                         <button class="yes">Eureka!</button>
                         <button class="no">No thanks</button>
                     </div>
@@ -124,12 +144,14 @@
                     </div>
                 </div>
                 <div class="option something-else">
-                    <h1>try something else</h1>
-                    <button class="something-else">Try something else</button>
+                    <h1>don't worry, let's try something else</h1>
+                    <div class="three-bttn-wrap bttn-wrap">
+                        <button id="step1">trending</button>
+                        <button id="step2">your friends</button>
+                        <button id="step3">browser history</button>
+                    </div>
                 </div>
             </section>
-            
-           
         </section>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="scripts/jokes.js"></script>
