adds buttons working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1>where do you want to start</h1>
                 <div class="btn">
                     <button id="step1">trending</button>
-                    <button id="step2">your friends</button>
+                    <button id="step2">selfie analysis</button>
                     <button id="step3">browser history</button>
                 </div>
             </section>
@@ -61,7 +61,7 @@
                     <h1>don't worry, let's try something else</h1>
                     <div class="three-bttn-wrap bttn-wrap">
                         <button id="step1">trending</button>
-                        <button id="step2">your friends</button>
+                        <button id="step2">selfie analysis</button>
                         <button id="step3">browser history</button>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <h1>don't worry, let's try something else</h1>
                     <div class="three-bttn-wrap bttn-wrap">
                         <button id="step1">trending</button>
-                        <button id="step2">your friends</button>
+                        <button id="step2">selfie analysis</button>
                         <button id="step3">browser history</button>
                     </div>
                 </div>
@@ -132,11 +132,9 @@
                     </div>
                 </div>
                 <div class="option">
-                    <div class="half-wrap">
                         <h2>It looks like you were looking at a suicide prevention hotline: <span>why not follow through on something for once</span></h2>
-                    </div>
                     <div class="half-wrap img-wrap">
-                        <img src="images/suicide.jpeg" alt="">
+                        <img src="images/suicide.jpg">
                     </div>
                     <div class="bttn-wrap">
                         <button class="yes">Eureka!</button>
@@ -147,7 +145,7 @@
                     <h1>don't worry, let's try something else</h1>
                     <div class="three-bttn-wrap bttn-wrap">
                         <button id="step1">trending</button>
-                        <button id="step2">your friends</button>
+                        <button id="step2">selfie analysis</button>
                         <button id="step3">browser history</button>
                     </div>
                 </div>
