adds rest of jokes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <body>
         <section class="wrapper">
             <section class="wrap step step0">
-                <h1>eureka!</h1>
-                <button class="forgot">I forget</button>
+                <h1>eureka! </h1>
+                <h2>The app that helps you remember what you were doing, <em>because you’re not an idiot—it’s science! </em></h2>
+                <button class="forgot">help me remember</button>
             </section>
-
             <section class="first-screen">
-                <h1>where do you want to start</h1>
+                <h1>where do you want to start?</h1>
                 <div class="btn">
                     <button id="step1">trending</button>
                     <button id="step2">selfie analysis</button>
@@ -92,7 +92,7 @@
                 <div class="option">
                     <h2>you look old: <span>why not book an appointment for a rejuvasuction liposuction botox life</span></h2>
                     <div class="half-wrap img-wrap">
-                        <img src="images/mark.png" alt="">
+                        <img src="images/botox.png" alt="">
                     </div>
                     <div class="bttn-wrap">
                         <button class="yes">Eureka!</button>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="option">
-                        <h2>It looks like you were looking at a suicide prevention hotline: <span>why not follow through on something for once</span></h2>
+                    <h2>It looks like you were looking at a suicide prevention hotline: <span>why not follow through on something for once</span></h2>
                     <div class="half-wrap img-wrap">
                         <img src="images/suicide.jpg">
                     </div>
