Create botox answer

--- a/loading.html
+++ b/loading.html
@@ -66,6 +66,11 @@
       animation-fill-mode: forwards;
       animation-timing-function: ease-in-out;
     }
+    html { font-family: Helvetica; }
+    #botox img { float: left; margin-right: 3em;}
+    #botox li {
+      margin-bottom: 0.5em;
+    }
   </style>
 </head>
 <body>
@@ -81,5 +86,22 @@
     <img src="img/einstein.png">
     <h1><span>eu</span>r<span>e</span>k<span>a!</span></h1>
   </div>
+  
+  <hr>
+  
+  <div id="botox">
+    <p>We found 3 highly-recommended plastic surgeons close to you:</p>
+    <img src="img/botox-map.png">
+    <ol>
+      <li>Dr. Mitchell Brown<br>
+        (416) 323-6336</li>
+      <li>Dr. Philip Solomon MD, FRCSC<br>
+        (905) 764-7799</li>
+      <li>Toronto Cosmetic Surgery Institute<br>
+         (416) 834-6640
+         <img src="img/botox-ad.jpg">
+         </li>
+    </ol>
+  </div>  
 </body>
 </html>
