--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
             </section>
             <!-- photo -->
             <section class="wrap step step2">
-                <h3>Take a photo of yourself</h3>
+                <h3>selfie analysis</h3>
                 <div class="option" id="option-2">
+                    <img src="images/selfie.jpg">
+                    <div class="bttn-wrap">
+                        <button class="yes">Eureka!</button>
+                        <button class="no">No thanks</button>
+                    </div>
+                </div>
+
+                <div class="option">
                     <h2>you look tired:<span> why not treat yourself to a peppermint creme brulee chestnut candy cane frappachino lattespresso? Your local Starbucks is only 27m away! </span></h2>
                     <div class="half-wrap img-wrap">
                         <img src="images/starbucks.jpeg" alt="">
@@ -138,16 +146,25 @@
                     </div>
                     <div class="bttn-wrap">
                         <button class="yes">Eureka!</button>
-                        <button class="no">No thanks</button>
+                        <button class="no last">No thanks</button>
                     </div>
                 </div>
-                <div class="option something-else">
+                <!-- <div class="option something-else">
                     <h1>don't worry, let's try something else</h1>
                     <div class="three-bttn-wrap bttn-wrap">
                         <button id="step1">trending</button>
                         <button id="step2">selfie analysis</button>
                         <button id="step3">browser history</button>
                     </div>
+                </div> -->
+            </section>
+
+            <section class="wrap step mb-wrapper">
+                <h3>Well, it looks like you have forgotten, but don't worry, you're not an idiot—it's science! How about just doing what you normally do at this time ...</h3>
+                <button class="mb">Okay ... </button>
+
+                <div class="mb-wrap">
+                    <img src="images/self-love.png" class="mb-img">
                 </div>
             </section>
         </section>
